# kyrylo-data-sync

./: .gitignore  AGENT.md  README.md  implementation.md  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
kdata/: __init__.py  aio.py  config.py  key_data.py
tests/: test_key_data.py
